--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".UserListActivity"/>
-
+        <activity android:name=".UserListActivity" />
+        <activity android:name=".ProfilActivity"></activity>
     </application>
 
 </manifest>
